# radiation-transmission

./: CMakeLists.txt  LICENSE  README.md  main.cpp
distributions/: cry.root
src/: ActionInitialization.cpp  ActionInitialization.h  DetectorConstruction.cpp  DetectorConstruction.h  EventAction.cpp  EventAction.h  PhysicsList.cpp  PhysicsList.h  PrimaryGeneratorAction.cpp  PrimaryGeneratorAction.h  RunAction.cpp  RunAction.h  SensitiveDetector.cpp  SensitiveDetector.h  SteppingAction.cpp  SteppingAction.h  TrackingAction.cpp  TrackingAction.h
